<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addDietLO"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_background"
    tools:context=".diet_function.addDietPage">

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addBtn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="34dp"


        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Date:" />

            <EditText
                android:id="@+id/DateTxt"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0000/00/00"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Food:" />

            <EditText
                android:id="@+id/FoodTxt"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Food name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Calories:" />

            <EditText
                android:id="@+id/CaloriesTxt"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0000"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Meal:" />

            <Spinner
                android:id="@+id/MealDD"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/Ivory"
        android:text="Add" />

</RelativeLayout>