...


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addMealBtn"
        android:layout_width="144dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="Add Meal"
        android:backgroundTint="@color/Ivory"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/setGoalBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.372" />

    <LinearLayout
...
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/TodayBtn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="today"
            android:textColor="@color/black"
            app:backgroundTint="@color/white" />
...
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.482" />

    <Button
        android:id="@+id/BackBtn"
        android:layout_width="104dp"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="24dp"
        android:text="back"
        android:textColor="@color/black"
...
