...
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="24dp"
        android:textAlignment="center"
        android:text="Insert daily calories "
        app:layout_constraintBottom_toTopOf="@+id/goalCalTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/goalCalTxt"
...
        android:textSize="20dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/weeklyCalTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setBtn" />

    <TextView
        android:id="@+id/weeklyCalTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
...
